Refactor to simplify stream to collection